--- a/meetup/pyar-19-sep-2020/code_smells.ipynb
+++ b/meetup/pyar-19-sep-2020/code_smells.ipynb
@@ -57,7 +57,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "![ENTRADA](https://assets.bonappetit.com/photos/5804fabfcf8577b803cad5e1/16:9/w_2560,c_limit/relish-tray-with-diy-eggs.jpg)"
    ]
@@ -339,7 +343,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# 🌶️ Problema"
    ]
@@ -498,7 +506,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "!tree soluciones/"
@@ -596,7 +608,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "!cat nuevas_ordenes.csv"
@@ -697,11 +713,100 @@
     }
    },
    "source": [
+    "# Code Smells"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "```\n",
+    "Alternative Classes with Different Interfaces \n",
+    "Comments \n",
+    "Data Class \n",
+    "Data Clumps \n",
+    "Divergent Change \n",
+    "Duplicated Code \n",
+    "Feature Envy \n",
+    "Global Data \n",
+    "Insider Trading \n",
+    "Large Class \n",
+    "Lazy Element\n",
+    "Long Function \n",
+    "Long Parameter List \n",
+    "Loops \n",
+    "Message Chains \n",
+    "Middle Man \n",
+    "Mutable Data \n",
+    "Mysterious Name \n",
+    "Primitive Obsession\n",
+    "Refused Bequest \n",
+    "Repeated Switches \n",
+    "Shotgun Surgery \n",
+    "Speculative Generality \n",
+    "Temporary Field \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "### Flocking Rules\n",
     "\n",
     "1. Select the things that are most alike.\n",
     "2. Find the smallest difference between them.\n",
     "3. Make the simplest change that will remove that difference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform linux -- Python 3.8.5, pytest-6.0.1, py-1.9.0, pluggy-0.13.1\n",
+      "rootdir: /home/sasha/code/presentations/meetup/pyar-19-sep-2020\n",
+      "plugins: hypothesis-5.26.0\n",
+      "collected 1 item                                                               \u001b[0m\n",
+      "\n",
+      "soluciones/chef_nivel_dos/test.py \u001b[32m.\u001b[0m\u001b[32m                                      [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.08s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pytest soluciones/chef_nivel_dos/test.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%load soluciones/chef_nivel_dos/solucion.py"
    ]
   },
   {
