--- a/meetup/pyar-19-sep-2020/code_smells.ipynb
+++ b/meetup/pyar-19-sep-2020/code_smells.ipynb
@@ -2,13 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<link rel=\"stylesheet\" href=\"https://use.fontawesome.com/releases/v5.6.3/css/all.css\" integrity=\"sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/\" crossorigin=\"anonymous\">\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%html\n",
     "<link rel=\"stylesheet\" href=\"https://use.fontawesome.com/releases/v5.6.3/css/all.css\" integrity=\"sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/\" crossorigin=\"anonymous\">"
@@ -215,13 +228,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('humunculo', 1, <function print>)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'humunculo', 1, print"
    ]
@@ -239,13 +263,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HUMUNCULO'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'humunculo'.upper()"
    ]
@@ -263,13 +298,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['h', 'm', 'nc', 'lo']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'humunculo'.split('u')"
    ]
@@ -395,13 +441,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "orden, cantidad, estilo\r\n",
+      "1, 1, duro\r\n",
+      "2, 2, frito"
+     ]
+    }
+   ],
    "source": [
     "!cat ordenes.txt"
    ]
@@ -430,13 +486,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 pidio 1 huevo duro\n",
+      "\n",
+      "2 pidio 2 huevo frito\n",
+      "Total: 3.4\n"
+     ]
+    }
+   ],
    "source": [
     "from soluciones.chef_nivel_uno import solucion \n",
     "solucion.ejecutar()"
@@ -455,13 +522,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La orden 1 es de 1 huevo 🥚\n",
+      "La orden 2 es de 2 huevos 🍳\n",
+      "El total a pagar es 3.4 pesos.\n"
+     ]
+    }
+   ],
    "source": [
     "from soluciones.chef_nivel_dos.solucion import CocinarHuevos\n",
     "CocinarHuevos().ejecutar()"
@@ -480,13 +557,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La orden 1 es de 1 huevo 🥚\n",
+      "La orden 2 es de 2 huevos 🍳\n",
+      "El total a pagar es 3.4 pesos.\n"
+     ]
+    }
+   ],
    "source": [
     "from soluciones.chef_nivel_tres.solucion import CocinarHuevos\n",
     "CocinarHuevos().ejecutar()"
@@ -505,13 +592,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34;42msoluciones/\u001b[00m\r\n",
+      "├── \u001b[34;42mchef_nivel_dos\u001b[00m\r\n",
+      "│   ├── __init__.py\r\n",
+      "│   ├── \u001b[34;42m__pycache__\u001b[00m\r\n",
+      "│   │   ├── __init__.cpython-38.pyc\r\n",
+      "│   │   ├── solucion.cpython-38.pyc\r\n",
+      "│   │   └── test.cpython-38-pytest-6.0.1.pyc\r\n",
+      "│   ├── solucion.py\r\n",
+      "│   └── test.py\r\n",
+      "├── \u001b[34;42mchef_nivel_tres\u001b[00m\r\n",
+      "│   ├── __init__.py\r\n",
+      "│   ├── \u001b[34;42m__pycache__\u001b[00m\r\n",
+      "│   │   ├── __init__.cpython-38.pyc\r\n",
+      "│   │   ├── solucion.cpython-38.pyc\r\n",
+      "│   │   └── test_cocinar_huevos.cpython-38-pytest-6.0.1.pyc\r\n",
+      "│   ├── solucion.py\r\n",
+      "│   └── test_cocinar_huevos.py\r\n",
+      "├── \u001b[34;42mchef_nivel_uno\u001b[00m\r\n",
+      "│   ├── \u001b[34;42m__pycache__\u001b[00m\r\n",
+      "│   │   └── solucion.cpython-38.pyc\r\n",
+      "│   └── solucion.py\r\n",
+      "├── __init__.py\r\n",
+      "└── \u001b[34;42m__pycache__\u001b[00m\r\n",
+      "    └── __init__.cpython-38.pyc\r\n",
+      "\r\n",
+      "7 directories, 16 files\r\n"
+     ]
+    }
+   ],
    "source": [
     "!tree soluciones/"
    ]
@@ -526,7 +646,49 @@
    },
    "outputs": [],
    "source": [
-    "%load soluciones/chef_nivel_uno/solucion.py"
+    "# %load soluciones/chef_nivel_uno/solucion.py\n",
+    "precios = (1.0, 1.2) # Precios : ( duro, frito )\n",
+    "\n",
+    "def ejecutar():\n",
+    "    'Cocinar Huevos'\n",
+    "    \n",
+    "    #Cargar ordenes\n",
+    "    O = []\n",
+    "    try:\n",
+    "        with open('ordenes.txt','r') as f:\n",
+    "            i = 0\n",
+    "            for l in f:\n",
+    "#                 print(l)\n",
+    "                if i == 0:\n",
+    "                    i += 1\n",
+    "                    continue\n",
+    "                else:\n",
+    "#                     print(l)\n",
+    "#                     print(l[6:])\n",
+    "                    if (l[6:] == 'duro') or (l[6:] == 'duro\\n'):\n",
+    "                        print(f'{l[0]} pidio {l[3]} huevo {l[6:]}')\n",
+    "                        O.append( ('duro', int(l[3]) ) )\n",
+    "                    elif (l[6:] == 'frito') or (l[6:] == 'frito\\n'):\n",
+    "                        print(f'{l[0]} pidio {l[3]} huevo {l[6:]}')\n",
+    "                        O.append( ('frito', int(l[3])) )\n",
+    "                i += 1\n",
+    "    except:\n",
+    "        print('No se pudieron cargar las ordenes. Ahhh!!')\n",
+    "#     print(O)\n",
+    "    \n",
+    "    # Calcular total\n",
+    "    t = 0\n",
+    "    for i in O:\n",
+    "        if i[0] == 'duro':\n",
+    "            t += precios[0]*i[1]\n",
+    "        else:\n",
+    "            t += precios[1]*i[1]\n",
+    "            \n",
+    "    print(f'Total: {t}')\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    ejecutar()"
    ]
   },
   {
@@ -539,7 +701,42 @@
    },
    "outputs": [],
    "source": [
-    "%load soluciones/chef_nivel_dos/solucion.py"
+    "# %load soluciones/chef_nivel_dos/solucion.py\n",
+    "import csv\n",
+    "from collections import Counter, namedtuple\n",
+    "\n",
+    "Orden = namedtuple('Orden','orden cantidad estilo')\n",
+    "\n",
+    "class CocinarHuevos:\n",
+    "\n",
+    "    PRECIOS = { 'duro' : 1.0, \n",
+    "                'frito': 1.2,\n",
+    "              }\n",
+    "    \n",
+    "    REPR = { 'duro'  : '\\N{egg}',\n",
+    "             'frito' : '\\N{cooking}',\n",
+    "           }\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def ejecutar(archivo='ordenes.txt'):\n",
+    "        with open(archivo) as f:\n",
+    "            csv_reader = csv.reader(f)\n",
+    "            ordenes = list(csv_reader)[1:]\n",
+    "            \n",
+    "            cuentas = Counter( row[2] for row in ordenes for _ in range(int(row[1].strip())) )\n",
+    "            total = sum( CocinarHuevos.PRECIOS.get(k.strip(),0)*v for k,v in cuentas.items()  )\n",
+    "            \n",
+    "            CocinarHuevos.informar(ordenes)\n",
+    "            print(f'El total a pagar es {total} pesos.')\n",
+    "            \n",
+    "    @staticmethod\n",
+    "    def informar(ordenes):\n",
+    "        for orden in ordenes:\n",
+    "            orden = Orden(*orden)\n",
+    "            x = ( f'huevo {CocinarHuevos.REPR.get(orden.estilo.strip())}'\n",
+    "                   if int(orden.cantidad.strip()) == 1 \n",
+    "                   else f'huevos {CocinarHuevos.REPR.get(orden.estilo.strip())}' )\n",
+    "            print(f'La orden {orden.orden} es de {orden.cantidad.strip()} {x}')"
    ]
   },
   {
@@ -565,7 +762,18 @@
    },
    "outputs": [],
    "source": [
-    "%load soluciones/chef_nivel_dos/test.py"
+    "# %load soluciones/chef_nivel_dos/test.py\n",
+    "from .solucion import CocinarHuevos\n",
+    "\n",
+    "esperado = '''La orden 1 es de 1 huevo 🥚\n",
+    "La orden 2 es de 2 huevos 🍳\n",
+    "El total a pagar es 3.4 pesos.\n",
+    "'''\n",
+    "\n",
+    "def test_CocinarHuevos(capsys):\n",
+    "    CocinarHuevos().ejecutar()\n",
+    "    captured = capsys.readouterr()\n",
+    "    assert captured.out == esperado"
    ]
   },
   {
@@ -578,7 +786,42 @@
    },
    "outputs": [],
    "source": [
-    "%load soluciones/chef_nivel_tres/solucion.py"
+    "# %load soluciones/chef_nivel_tres/solucion.py\n",
+    "import csv\n",
+    "from collections import Counter, namedtuple\n",
+    "\n",
+    "Orden = namedtuple('Orden','orden cantidad estilo')\n",
+    "\n",
+    "class CocinarHuevos:\n",
+    "\n",
+    "    PRECIOS = { 'duro' : 1.0, \n",
+    "                'frito': 1.2,\n",
+    "              }\n",
+    "    \n",
+    "    REPR = { 'duro'  : '\\N{egg}',\n",
+    "             'frito' : '\\N{cooking}',\n",
+    "           }\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def ejecutar(archivo='ordenes.txt'):\n",
+    "        with open(archivo) as f:\n",
+    "            csv_reader = csv.reader(f)\n",
+    "            ordenes = list(csv_reader)[1:]\n",
+    "            \n",
+    "            cuentas = Counter( row[2] for row in ordenes for _ in range(int(row[1].strip())) )\n",
+    "            total = sum( CocinarHuevos.PRECIOS.get(k.strip(),0)*v for k,v in cuentas.items()  )\n",
+    "            \n",
+    "            CocinarHuevos.informar(ordenes)\n",
+    "            print(f'El total a pagar es {total} pesos.')\n",
+    "            \n",
+    "    @staticmethod\n",
+    "    def informar(ordenes):\n",
+    "        for orden in ordenes:\n",
+    "            orden = Orden(*orden)\n",
+    "            x = ( f'huevo {CocinarHuevos.REPR.get(orden.estilo.strip())}'\n",
+    "                   if int(orden.cantidad.strip()) == 1 \n",
+    "                   else f'huevos {CocinarHuevos.REPR.get(orden.estilo.strip())}' )\n",
+    "            print(f'La orden {orden.orden} es de {orden.cantidad.strip()} {x}')"
    ]
   },
   {
@@ -607,13 +850,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "orden, cantidad, estilo\r\n",
+      "1, 1, duro\r\n",
+      "2, 2, frito\r\n",
+      "13,2, omelet"
+     ]
+    }
+   ],
    "source": [
     "!cat nuevas_ordenes.csv"
    ]
@@ -769,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -788,7 +1042,7 @@
       "\n",
       "soluciones/chef_nivel_dos/test.py \u001b[32m.\u001b[0m\u001b[32m                                      [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.08s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
+      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.04s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
      ]
     }
    ],
@@ -806,7 +1060,42 @@
    },
    "outputs": [],
    "source": [
-    "%load soluciones/chef_nivel_dos/solucion.py"
+    "# %load soluciones/chef_nivel_dos/solucion.py\n",
+    "import csv\n",
+    "from collections import Counter, namedtuple\n",
+    "\n",
+    "Orden = namedtuple('Orden','orden cantidad estilo')\n",
+    "\n",
+    "class CocinarHuevos:\n",
+    "\n",
+    "    PRECIOS = { 'duro' : 1.0, \n",
+    "                'frito': 1.2,\n",
+    "              }\n",
+    "    \n",
+    "    REPR = { 'duro'  : '\\N{egg}',\n",
+    "             'frito' : '\\N{cooking}',\n",
+    "           }\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def ejecutar(archivo='ordenes.txt'):\n",
+    "        with open(archivo) as f:\n",
+    "            csv_reader = csv.reader(f)\n",
+    "            ordenes = list(csv_reader)[1:]\n",
+    "            \n",
+    "            cuentas = Counter( row[2] for row in ordenes for _ in range(int(row[1].strip())) )\n",
+    "            total = sum( CocinarHuevos.PRECIOS.get(k.strip(),0)*v for k,v in cuentas.items()  )\n",
+    "            \n",
+    "            CocinarHuevos.informar(ordenes)\n",
+    "            print(f'El total a pagar es {total} pesos.')\n",
+    "            \n",
+    "    @staticmethod\n",
+    "    def informar(ordenes):\n",
+    "        for orden in ordenes:\n",
+    "            orden = Orden(*orden)\n",
+    "            x = ( f'huevo {CocinarHuevos.REPR.get(orden.estilo.strip())}'\n",
+    "                   if int(orden.cantidad.strip()) == 1 \n",
+    "                   else f'huevos {CocinarHuevos.REPR.get(orden.estilo.strip())}' )\n",
+    "            print(f'La orden {orden.orden} es de {orden.cantidad.strip()} {x}')"
    ]
   },
   {
@@ -819,11 +1108,6 @@
    "source": [
     "![FLAN](https://assets.bonappetit.com/photos/5a05d34cba9fd6568203c83e/16:9/w_2560,c_limit/flan-with-grapefruit.jpg)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
