--- a/meetup/pyar-19-sep-2020/code_smells.ipynb
+++ b/meetup/pyar-19-sep-2020/code_smells.ipynb
@@ -51,19 +51,16 @@
     "    - 🥖 ¿Cómo mejoro la calidad de mi código?\n",
     "    - 🧈 Diseño con Objetos\n",
     " \n",
-    " \n",
     "- 🍽️ Plato principal \n",
     "    \n",
     "    - 🌶️ Problema\n",
     "    - 🍷  Cuatro Niveles de Código\n",
     "    - 🍝 Reconociendo *Code Smells*\n",
-    "     \n",
     " \n",
     "- 🥄 Postre\n",
     "    \n",
     "    - ☕ Extendiendo el código\n",
     "    - 🍮 \n",
-    "    \n",
     "    \n",
     "- 🥡 Para llevar"
    ]
@@ -535,7 +532,7 @@
      "text": [
       "La orden 1 es de 1 huevo 🥚\n",
       "La orden 2 es de 2 huevos 🍳\n",
-      "El total a pagar es 3.4 pesos.\n"
+      "El total a pagar es 0.5 pesos.\n"
      ]
     }
    ],
@@ -570,7 +567,7 @@
      "text": [
       "La orden 1 es de 1 huevo 🥚\n",
       "La orden 2 es de 2 huevos 🍳\n",
-      "El total a pagar es 3.4 pesos.\n"
+      "El total a pagar es 0.5 pesos.\n"
      ]
     }
    ],
@@ -638,62 +635,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 pidio 1 huevo duro\n",
+      "\n",
+      "2 pidio 2 huevo frito\n",
+      "Total: 3.4\n"
+     ]
+    }
+   ],
    "source": [
-    "# %load soluciones/chef_nivel_uno/solucion.py\n",
-    "precios = (1.0, 1.2) # Precios : ( duro, frito )\n",
-    "\n",
-    "def ejecutar():\n",
-    "    'Cocinar Huevos'\n",
-    "    \n",
-    "    #Cargar ordenes\n",
-    "    O = []\n",
-    "    try:\n",
-    "        with open('ordenes.txt','r') as f:\n",
-    "            i = 0\n",
-    "            for l in f:\n",
-    "#                 print(l)\n",
-    "                if i == 0:\n",
-    "                    i += 1\n",
-    "                    continue\n",
-    "                else:\n",
-    "#                     print(l)\n",
-    "#                     print(l[6:])\n",
-    "                    if (l[6:] == 'duro') or (l[6:] == 'duro\\n'):\n",
-    "                        print(f'{l[0]} pidio {l[3]} huevo {l[6:]}')\n",
-    "                        O.append( ('duro', int(l[3]) ) )\n",
-    "                    elif (l[6:] == 'frito') or (l[6:] == 'frito\\n'):\n",
-    "                        print(f'{l[0]} pidio {l[3]} huevo {l[6:]}')\n",
-    "                        O.append( ('frito', int(l[3])) )\n",
-    "                i += 1\n",
-    "    except:\n",
-    "        print('No se pudieron cargar las ordenes. Ahhh!!')\n",
-    "#     print(O)\n",
-    "    \n",
-    "    # Calcular total\n",
-    "    t = 0\n",
-    "    for i in O:\n",
-    "        if i[0] == 'duro':\n",
-    "            t += precios[0]*i[1]\n",
-    "        else:\n",
-    "            t += precios[1]*i[1]\n",
-    "            \n",
-    "    print(f'Total: {t}')\n",
-    "\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    ejecutar()"
+    "%load soluciones/chef_nivel_uno/solucion.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -701,42 +667,7 @@
    },
    "outputs": [],
    "source": [
-    "# %load soluciones/chef_nivel_dos/solucion.py\n",
-    "import csv\n",
-    "from collections import Counter, namedtuple\n",
-    "\n",
-    "Orden = namedtuple('Orden','orden cantidad estilo')\n",
-    "\n",
-    "class CocinarHuevos:\n",
-    "\n",
-    "    PRECIOS = { 'duro' : 1.0, \n",
-    "                'frito': 1.2,\n",
-    "              }\n",
-    "    \n",
-    "    REPR = { 'duro'  : '\\N{egg}',\n",
-    "             'frito' : '\\N{cooking}',\n",
-    "           }\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def ejecutar(archivo='ordenes.txt'):\n",
-    "        with open(archivo) as f:\n",
-    "            csv_reader = csv.reader(f)\n",
-    "            ordenes = list(csv_reader)[1:]\n",
-    "            \n",
-    "            cuentas = Counter( row[2] for row in ordenes for _ in range(int(row[1].strip())) )\n",
-    "            total = sum( CocinarHuevos.PRECIOS.get(k.strip(),0)*v for k,v in cuentas.items()  )\n",
-    "            \n",
-    "            CocinarHuevos.informar(ordenes)\n",
-    "            print(f'El total a pagar es {total} pesos.')\n",
-    "            \n",
-    "    @staticmethod\n",
-    "    def informar(ordenes):\n",
-    "        for orden in ordenes:\n",
-    "            orden = Orden(*orden)\n",
-    "            x = ( f'huevo {CocinarHuevos.REPR.get(orden.estilo.strip())}'\n",
-    "                   if int(orden.cantidad.strip()) == 1 \n",
-    "                   else f'huevos {CocinarHuevos.REPR.get(orden.estilo.strip())}' )\n",
-    "            print(f'La orden {orden.orden} es de {orden.cantidad.strip()} {x}')"
+    "%load soluciones/chef_nivel_dos/solucion.py"
    ]
   },
   {
@@ -754,26 +685,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "attempted relative import with no known parent package",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-618844e8a431>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# %load soluciones/chef_nivel_dos/test.py\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0msolucion\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCocinarHuevos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m esperado = '''La orden 1 es de 1 huevo 🥚\n\u001b[1;32m      5\u001b[0m \u001b[0mLa\u001b[0m \u001b[0morden\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0mes\u001b[0m \u001b[0mde\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0mhuevos\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m🍳\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: attempted relative import with no known parent package"
+     ]
+    }
+   ],
    "source": [
-    "# %load soluciones/chef_nivel_dos/test.py\n",
-    "from .solucion import CocinarHuevos\n",
-    "\n",
-    "esperado = '''La orden 1 es de 1 huevo 🥚\n",
-    "La orden 2 es de 2 huevos 🍳\n",
-    "El total a pagar es 3.4 pesos.\n",
-    "'''\n",
-    "\n",
-    "def test_CocinarHuevos(capsys):\n",
-    "    CocinarHuevos().ejecutar()\n",
-    "    captured = capsys.readouterr()\n",
-    "    assert captured.out == esperado"
+    "%load soluciones/chef_nivel_dos/test.py"
    ]
   },
   {
@@ -786,42 +718,7 @@
    },
    "outputs": [],
    "source": [
-    "# %load soluciones/chef_nivel_tres/solucion.py\n",
-    "import csv\n",
-    "from collections import Counter, namedtuple\n",
-    "\n",
-    "Orden = namedtuple('Orden','orden cantidad estilo')\n",
-    "\n",
-    "class CocinarHuevos:\n",
-    "\n",
-    "    PRECIOS = { 'duro' : 1.0, \n",
-    "                'frito': 1.2,\n",
-    "              }\n",
-    "    \n",
-    "    REPR = { 'duro'  : '\\N{egg}',\n",
-    "             'frito' : '\\N{cooking}',\n",
-    "           }\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def ejecutar(archivo='ordenes.txt'):\n",
-    "        with open(archivo) as f:\n",
-    "            csv_reader = csv.reader(f)\n",
-    "            ordenes = list(csv_reader)[1:]\n",
-    "            \n",
-    "            cuentas = Counter( row[2] for row in ordenes for _ in range(int(row[1].strip())) )\n",
-    "            total = sum( CocinarHuevos.PRECIOS.get(k.strip(),0)*v for k,v in cuentas.items()  )\n",
-    "            \n",
-    "            CocinarHuevos.informar(ordenes)\n",
-    "            print(f'El total a pagar es {total} pesos.')\n",
-    "            \n",
-    "    @staticmethod\n",
-    "    def informar(ordenes):\n",
-    "        for orden in ordenes:\n",
-    "            orden = Orden(*orden)\n",
-    "            x = ( f'huevo {CocinarHuevos.REPR.get(orden.estilo.strip())}'\n",
-    "                   if int(orden.cantidad.strip()) == 1 \n",
-    "                   else f'huevos {CocinarHuevos.REPR.get(orden.estilo.strip())}' )\n",
-    "            print(f'La orden {orden.orden} es de {orden.cantidad.strip()} {x}')"
+    "%load soluciones/chef_nivel_tres/solucion.py"
    ]
   },
   {
@@ -850,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1022,30 +919,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform linux -- Python 3.8.5, pytest-6.0.1, py-1.9.0, pluggy-0.13.1\n",
-      "rootdir: /home/sasha/code/presentations/meetup/pyar-19-sep-2020\n",
-      "plugins: hypothesis-5.26.0\n",
-      "collected 1 item                                                               \u001b[0m\n",
-      "\n",
-      "soluciones/chef_nivel_dos/test.py \u001b[32m.\u001b[0m\u001b[32m                                      [100%]\u001b[0m\n",
-      "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.04s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
-     ]
+   "source": [
+    "![FLAN](https://assets.bonappetit.com/photos/5a05d34cba9fd6568203c83e/16:9/w_2560,c_limit/flan-with-grapefruit.jpg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "!pytest soluciones/chef_nivel_dos/test.py"
    ]
@@ -1060,53 +952,7 @@
    },
    "outputs": [],
    "source": [
-    "# %load soluciones/chef_nivel_dos/solucion.py\n",
-    "import csv\n",
-    "from collections import Counter, namedtuple\n",
-    "\n",
-    "Orden = namedtuple('Orden','orden cantidad estilo')\n",
-    "\n",
-    "class CocinarHuevos:\n",
-    "\n",
-    "    PRECIOS = { 'duro' : 1.0, \n",
-    "                'frito': 1.2,\n",
-    "              }\n",
-    "    \n",
-    "    REPR = { 'duro'  : '\\N{egg}',\n",
-    "             'frito' : '\\N{cooking}',\n",
-    "           }\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def ejecutar(archivo='ordenes.txt'):\n",
-    "        with open(archivo) as f:\n",
-    "            csv_reader = csv.reader(f)\n",
-    "            ordenes = list(csv_reader)[1:]\n",
-    "            \n",
-    "            cuentas = Counter( row[2] for row in ordenes for _ in range(int(row[1].strip())) )\n",
-    "            total = sum( CocinarHuevos.PRECIOS.get(k.strip(),0)*v for k,v in cuentas.items()  )\n",
-    "            \n",
-    "            CocinarHuevos.informar(ordenes)\n",
-    "            print(f'El total a pagar es {total} pesos.')\n",
-    "            \n",
-    "    @staticmethod\n",
-    "    def informar(ordenes):\n",
-    "        for orden in ordenes:\n",
-    "            orden = Orden(*orden)\n",
-    "            x = ( f'huevo {CocinarHuevos.REPR.get(orden.estilo.strip())}'\n",
-    "                   if int(orden.cantidad.strip()) == 1 \n",
-    "                   else f'huevos {CocinarHuevos.REPR.get(orden.estilo.strip())}' )\n",
-    "            print(f'La orden {orden.orden} es de {orden.cantidad.strip()} {x}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "![FLAN](https://assets.bonappetit.com/photos/5a05d34cba9fd6568203c83e/16:9/w_2560,c_limit/flan-with-grapefruit.jpg)"
+    "%load soluciones/chef_nivel_dos/solucion.py"
    ]
   },
   {
@@ -1118,17 +964,6 @@
    },
    "source": [
     "<i class=\"fab fa-twitter\" title=\"twitter\"></i> sashaKile"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "![provecho](materiales/imagenes/provecho.png)"
    ]
   },
   {
@@ -1183,6 +1018,17 @@
     "[Get a Whiff of This](https://www.youtube.com/watch?v=PJjHfa5yxlU)\n",
     "\n",
     "[The Magic Tricks of Testing](https://www.youtube.com/watch?v=URSWYvyc42M)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![provecho](materiales/imagenes/provecho.png)"
    ]
   },
   {
