Arreglar error de solucion 3

--- a/meetup/pyar-19-sep-2020/code_smells.ipynb
+++ b/meetup/pyar-19-sep-2020/code_smells.ipynb
@@ -225,24 +225,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('humunculo', 1, <function print>)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'humunculo', 1, print"
    ]
@@ -260,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -273,7 +262,7 @@
        "'HUMUNCULO'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -308,7 +297,7 @@
        "['h', 'm', 'nc', 'lo']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -497,7 +486,7 @@
       "1 pidio 1 huevo duro\n",
       "\n",
       "2 pidio 2 huevo frito\n",
-      "Total: 3.4\n"
+      "Total: 0.5\n"
      ]
     }
    ],
@@ -554,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -635,31 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 pidio 1 huevo duro\n",
-      "\n",
-      "2 pidio 2 huevo frito\n",
-      "Total: 3.4\n"
-     ]
-    }
-   ],
-   "source": [
-    "%load soluciones/chef_nivel_uno/solucion.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -667,7 +632,97 @@
    },
    "outputs": [],
    "source": [
-    "%load soluciones/chef_nivel_dos/solucion.py"
+    "# %load soluciones/chef_nivel_uno/solucion.py\n",
+    "precios = (0.1, 0.2) # Precios : ( duro, frito )\n",
+    "\n",
+    "def ejecutar():\n",
+    "    'Cocinar Huevos'\n",
+    "    \n",
+    "    #Cargar ordenes\n",
+    "    O = []\n",
+    "    try:\n",
+    "        with open('ordenes.txt','r') as f:\n",
+    "            i = 0\n",
+    "            for l in f:\n",
+    "#                 print(l)\n",
+    "                if i == 0:\n",
+    "                    i += 1\n",
+    "                    continue\n",
+    "                else:\n",
+    "#                     print(l)\n",
+    "#                     print(l[6:])\n",
+    "                    if (l[6:] == 'duro') or (l[6:] == 'duro\\n'):\n",
+    "                        print(f'{l[0]} pidio {l[3]} huevo {l[6:]}')\n",
+    "                        O.append( ('duro', int(l[3]) ) )\n",
+    "                    elif (l[6:] == 'frito') or (l[6:] == 'frito\\n'):\n",
+    "                        print(f'{l[0]} pidio {l[3]} huevo {l[6:]}')  \n",
+    "                        O.append( ('frito', int(l[3])) )\n",
+    "                i += 1\n",
+    "    except:\n",
+    "        print('No se pudieron cargar las ordenes. Ahhh!!')\n",
+    "#     print(O)\n",
+    "    \n",
+    "    # Calcular total\n",
+    "    t = 0\n",
+    "    for i in O:\n",
+    "        if i[0] == 'duro':\n",
+    "            t += precios[0]*i[1]\n",
+    "        else:\n",
+    "            t += precios[1]*i[1]\n",
+    "            \n",
+    "    print(f'Total: {t}')\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    ejecutar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# %load soluciones/chef_nivel_dos/solucion.py\n",
+    "import csv\n",
+    "from collections import Counter, namedtuple\n",
+    "\n",
+    "Orden = namedtuple('Orden','orden cantidad estilo')\n",
+    "\n",
+    "class CocinarHuevos:\n",
+    "\n",
+    "    PRECIOS = { 'duro' : 0.1, \n",
+    "                'frito': 0.2,\n",
+    "              }\n",
+    "    \n",
+    "    REPR = { 'duro'  : '\\N{egg}',\n",
+    "             'frito' : '\\N{cooking}',\n",
+    "           }\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def ejecutar(archivo='ordenes.txt'):\n",
+    "        with open(archivo) as f:\n",
+    "            csv_reader = csv.reader(f)\n",
+    "            ordenes = list(csv_reader)[1:]\n",
+    "            \n",
+    "            cuentas = Counter( row[2] for row in ordenes for _ in range(int(row[1].strip())) )\n",
+    "            total = sum( CocinarHuevos.PRECIOS.get(k.strip(),0)*v for k,v in cuentas.items()  )\n",
+    "            \n",
+    "            CocinarHuevos.informar(ordenes)\n",
+    "            print(f'El total a pagar es {total} pesos.')\n",
+    "            \n",
+    "    @staticmethod\n",
+    "    def informar(ordenes):\n",
+    "        for orden in ordenes:\n",
+    "            orden = Orden(*orden)\n",
+    "            x = ( f'huevo {CocinarHuevos.REPR.get(orden.estilo.strip())}'\n",
+    "                   if int(orden.cantidad.strip()) == 1 \n",
+    "                   else f'huevos {CocinarHuevos.REPR.get(orden.estilo.strip())}' )\n",
+    "            print(f'La orden {orden.orden} es de {orden.cantidad.strip()} {x}')"
    ]
   },
   {
@@ -685,27 +740,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "attempted relative import with no known parent package",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-618844e8a431>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# %load soluciones/chef_nivel_dos/test.py\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0msolucion\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCocinarHuevos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m esperado = '''La orden 1 es de 1 huevo 🥚\n\u001b[1;32m      5\u001b[0m \u001b[0mLa\u001b[0m \u001b[0morden\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0mes\u001b[0m \u001b[0mde\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0mhuevos\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m🍳\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: attempted relative import with no known parent package"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%load soluciones/chef_nivel_dos/test.py"
+    "# %load soluciones/chef_nivel_dos/test.py\n",
+    "from .solucion import CocinarHuevos\n",
+    "\n",
+    "esperado = '''La orden 1 es de 1 huevo 🥚\n",
+    "La orden 2 es de 2 huevos 🍳\n",
+    "El total a pagar es 0.5 pesos.\n",
+    "'''\n",
+    "\n",
+    "def test_CocinarHuevos(capsys):\n",
+    "    CocinarHuevos().ejecutar()\n",
+    "    captured = capsys.readouterr()\n",
+    "    assert captured.out == esperado"
    ]
   },
   {
@@ -718,7 +772,79 @@
    },
    "outputs": [],
    "source": [
-    "%load soluciones/chef_nivel_tres/solucion.py"
+    "# %load soluciones/chef_nivel_tres/solucion.py\n",
+    "import csv\n",
+    "from collections import Counter, namedtuple\n",
+    "\n",
+    "# Orden = namedtuple('Orden','orden cantidad estilo')\n",
+    "\n",
+    "class CocinarHuevos:\n",
+    "    \n",
+    "    def ejecutar(self, archivo='ordenes.txt'):\n",
+    "        ordenes = self.cargar_ordenes(archivo)\n",
+    "        total = sum( orden.costo() for orden in ordenes  )\n",
+    "        \n",
+    "        self.informar(ordenes)\n",
+    "        print(f'El total a pagar es {total} pesos.')\n",
+    "\n",
+    "    def cargar_ordenes(self, archivo):\n",
+    "        with open(archivo) as f:\n",
+    "            csv_reader = csv.reader(f)\n",
+    "            ordenes = list(csv_reader)[1:]\n",
+    "        return ordenes\n",
+    "            \n",
+    "    def informar(self, ordenes):\n",
+    "        for orden in ordenes:\n",
+    "            orden = Orden(*orden)\n",
+    "            print(orden)\n",
+    "\n",
+    "class Orden:\n",
+    "\n",
+    "    def __init__(self, orden, cantidad, estilo):\n",
+    "        self.orden = orden\n",
+    "        self.cantidad = int(cantidad)\n",
+    "        self.estilo = PreparacionHuevo.por(estilo.strip())\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f'La orden {self.orden} es de {self.cantidad} {self.rep_cantidad()} {self.estilo}'\n",
+    "\n",
+    "    def costo(self):\n",
+    "        return self.cantidad * self.estilo.costo()\n",
+    "\n",
+    "    def rep_cantidad(self):\n",
+    "        return 'huevo' if self.cantidad == 1 else 'huevos'\n",
+    "\n",
+    "class PreparacionHuevo:\n",
+    "\n",
+    "    _costo = 0.0\n",
+    "    _emoji = 'Desconocida'\n",
+    "\n",
+    "    @classmethod\n",
+    "    def por(cls, estilo):\n",
+    "        if estilo == 'duro':\n",
+    "            return HuevoDuro()\n",
+    "        elif estilo == 'frito':\n",
+    "            return HuevoFrito()\n",
+    "        else:\n",
+    "            return PreparacionDesconocida()\n",
+    "\n",
+    "    def costo(self):\n",
+    "        return self._costo\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return self._emoji\n",
+    "\n",
+    "class HuevoDuro(PreparacionHuevo):\n",
+    "    _costo = 0.1\n",
+    "    _emoji = '\\N{egg}'\n",
+    "\n",
+    "\n",
+    "class HuevoFrito(PreparacionHuevo):\n",
+    "    _costo = 0.2\n",
+    "    _emoji = '\\N{cooking}'\n",
+    "    \n",
+    "class PreparacionDesconocida(PreparacionHuevo):\n",
+    "    pass"
    ]
   },
   {
@@ -747,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -931,13 +1057,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform linux -- Python 3.8.5, pytest-6.0.1, py-1.9.0, pluggy-0.13.1\n",
+      "rootdir: /home/sasha/code/presentations/meetup/pyar-19-sep-2020\n",
+      "plugins: hypothesis-5.26.0\n",
+      "collected 1 item                                                               \u001b[0m\n",
+      "\n",
+      "soluciones/chef_nivel_dos/test.py \u001b[32m.\u001b[0m\u001b[32m                                      [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.06s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!pytest soluciones/chef_nivel_dos/test.py"
    ]
@@ -952,7 +1094,42 @@
    },
    "outputs": [],
    "source": [
-    "%load soluciones/chef_nivel_dos/solucion.py"
+    "# %load soluciones/chef_nivel_dos/solucion.py\n",
+    "import csv\n",
+    "from collections import Counter, namedtuple\n",
+    "\n",
+    "Orden = namedtuple('Orden','orden cantidad estilo')\n",
+    "\n",
+    "class CocinarHuevos:\n",
+    "\n",
+    "    PRECIOS = { 'duro' : 0.1, \n",
+    "                'frito': 0.2,\n",
+    "              }\n",
+    "    \n",
+    "    REPR = { 'duro'  : '\\N{egg}',\n",
+    "             'frito' : '\\N{cooking}',\n",
+    "           }\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def ejecutar(archivo='ordenes.txt'):\n",
+    "        with open(archivo) as f:\n",
+    "            csv_reader = csv.reader(f)\n",
+    "            ordenes = list(csv_reader)[1:]\n",
+    "            \n",
+    "            cuentas = Counter( row[2] for row in ordenes for _ in range(int(row[1].strip())) )\n",
+    "            total = sum( CocinarHuevos.PRECIOS.g et(k.strip(),0)*v for k,v in cuentas.items()  )\n",
+    "            \n",
+    "            CocinarHuevos.informar(ordenes) \n",
+    "            print(f'El total a pagar es {total} pesos.')\n",
+    "            \n",
+    "    @staticmethod\n",
+    "    def informar(ordenes): \n",
+    "        for orden in ordenes:\n",
+    "            orden = Orden(*orden)\n",
+    "            x = ( f'huevo {CocinarHuevos.REPR.get(orden.estilo.strip())}'\n",
+    "                   if int(orden.cantidad.strip()) == 1 \n",
+    "                   else f'huevos {CocinarHuevos.REPR.get(orden.estilo.strip())}' )\n",
+    "            print(f'La orden {orden.orden} es de {orden.cantidad.strip()} {x}')"
    ]
   },
   {
