Agregar diapositivas y nuevos ejemplos

--- a/journal_clubs/lec-28-ago-2020/slides.ipynb
+++ b/journal_clubs/lec-28-ago-2020/slides.ipynb
@@ -1,6 +1,99 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Titulo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Why this talk?\n",
+    "\n",
+    "Como fisiques no estamos formados para programar\n",
+    "\n",
+    "- \n",
+    "-\n",
+    "-\n",
+    "-"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Que es refactoring"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Que es un objeto\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ejemplo de resolver un problema en\n",
+    "\n",
+    "- coordenadas cartesianas\n",
+    "- coordenadas polares\n",
+    "- coordenadas canonicas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```Make the change easy "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```Refactoring is the process of changing a software\n",
+    "system in such a way that it does not alter the external\n",
+    "behavior of the code yet improves its internal structure.\n",
+    "— Martin Fowler\n",
+    "Refactoring ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<blockquote class=\"twitter-tweet\"><p lang=\"en\" dir=\"ltr\">for each desired change, make the change easy (warning: this may be hard), then make the easy change</p>&mdash; Kent Beck (@KentBeck) <a href=\"https://twitter.com/KentBeck/status/250733358307500032?ref_src=twsrc%5Etfw\">September 25, 2012</a></blockquote> <script async src=\"https://platform.twitter.com/widgets.js\" charset=\"utf-8\"></script>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Preparatory refactoring](https://martinfowler.com/articles/preparatory-refactoring-example.html)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -9,6 +102,33 @@
   }
  ],
  "metadata": {
+  "julynter-results": {
+   "filteredId": [],
+   "filteredIndividual": [],
+   "filteredRestart": [],
+   "filteredType": [],
+   "hash": "f780c3871cfe3fc78e667a65705a3a248bd120f7",
+   "visible": [
+    {
+     "cellId": "group",
+     "hash": "19d3d3d153f22e318cbe061df9e685ba5165b0aa",
+     "reason": "This groups other lint messages",
+     "reportId": "group",
+     "reportType": "confusenotebook",
+     "suggestion": null,
+     "text": "Confuse Notebook"
+    },
+    {
+     "cellId": 8,
+     "hash": "a1b0496947cd2ec75817e08aa2c0cba3f16efd89",
+     "reason": "Empty cells in between executable ones occupy space and might impact the readability of the notebook.",
+     "reportId": "c3",
+     "reportType": "confusenotebook",
+     "suggestion": "Please consider removing it to improve the readability.",
+     "text": "Cell 8 is empty in the middle of the notebook"
+    }
+   ]
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
